# DjinnBot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile.agent-runtime  Dockerfile.dashboard  Dockerfile.engine  Dockerfile.mcpo  Dockerfile.server  LICENSE  MIGRATION.md  PHASE-2-GRACE-POWERED-CHAT.md  PHASE-3-SMARTER-FEATURES.md  PHASE-4-SIMPLIFICATION.md  README.md  docker-compose.ghcr.yml  docker-compose.yml  install.sh  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: cli-publish.yml  cli-tests.yml  containers.yml  docs.yml  release.yml
agents/_templates/: AGENTS.md  MEMORY_TOOLS.md  PULSE.md
agents/chieko/: .gitkeep  AGENTS.md  IDENTITY.md  PULSE.md  PULSE.test.md  SOUL.md  config.yml  slack.yml
agents/eric/: .gitkeep  SOUL.md  (+5 more)
cli/: README.md  pyproject.toml
cli/djinnbot/: __init__.py  auth.py  chat.py  client.py  formatting.py  main.py  picker.py
cli/djinnbot/commands/: __init__.py  agent.py  cookies.py  memory.py  pipeline.py  provider.py  resolve.py  run.py  setup.py  step.py  update.py
cli/tests/: conftest.py  test_auth.py  test_auth_commands.py  test_chat.py  test_client.py  test_commands.py  test_formatting.py  test_provider.py
docs/: CNAME  MULTI_TENANT_VISION.md  TEST_PLAN_E2E.md  go.mod  hugo.yaml  linkpulse-spec.md
mcp/: config.json  osint_tools_mcp_server.py
pipelines/: bugfix.yml  engineering.yml  execute.yml  feature.yml  import.yml  planning-agentic.yml  planning.yml  resolve.yml  test-sandbox.yml  test-simple.yml
proxy/: docker-compose.yml
scripts/: patch-clawvault-qmd.js  patch-sqlite-vec.js
(+247 files in other folders)
