[project]
name = "djinnbot-cli"
version = "0.1.0"
description = "Python CLI for djinnbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "websockets>=12.0",
]

[project.scripts]
djinnbot = "djinnbot.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djinnbot"]
