[project]
name = "djinn-bot-cli"
version = "0.2.7"
description = "Python CLI for djinnbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "websockets>=12.0",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21.0",
]

[project.scripts]
djinn = "djinnbot.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djinnbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
